Task5/non-admin-api-allow.yaml
# Разрешаем трафик между front-end и back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-backend-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
    ports:
    - protocol: TCP
      port: 80


# Разрешаем трафик между admin-front-end и admin-back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-frontend-backend-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
    ports:
    - protocol: TCP
      port: 80


# Изолированный, новый сервис 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-new-service
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: nginx
  policyTypes:
  - Ingress
  ingress: []
